--- a/MDK-ARM/FirmwareMain/FirmwareMain.build_log.htm
+++ b/MDK-ARM/FirmwareMain/FirmwareMain.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.24.2.0
 Copyright (C) 2017 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Lars Aeschlimann, Bern University of Applied Science, LIC=----
+License Information: f Chris, d, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.24.1
@@ -21,41 +21,40 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\Lars Aeschlimann\Desktop\Firmwares_LR_Control\FirmwareMain\MDK-ARM\FirmwareMain.uvprojx
-Project File Date:  12/06/2017
+C:\Users\Chris\FirmwareMain\MDK-ARM\FirmwareMain.uvprojx
+Project File Date:  12/19/2017
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'FirmwareMain'
-compiling stm32f1xx_hal_gpio_ex.c...
+Build target 'FirmwareMain'
+compiling stm32f1xx_hal_cortex.c...
 compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_gpio_ex.c...
 compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_flash.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash_ex.c...
 compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal.c...
-compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_tim_ex.c...
-assembling startup_stm32f100xe.s...
 compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_it.c...
 compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_msp.c...
-compiling stm32f1xx_it.c...
 compiling main.c...
 linking...
-Program Size: Code=8168 RO-data=364 RW-data=40 ZI-data=1816  
+Program Size: Code=7612 RO-data=364 RW-data=36 ZI-data=1812  
 "FirmwareMain\FirmwareMain.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
 Package Vendor: ARM
-                http://www.keil.com/pack/ARM.CMSIS.5.0.1.pack
-                ARM.CMSIS.5.0.1
+                http://www.keil.com/pack/ARM.CMSIS.5.2.0.pack
+                ARM.CMSIS.5.2.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
-   * Component: CORE Version: 5.0.1
+   * Component: CORE Version: 5.0.2
 
 Package Vendor: Keil
                 http://www.keil.com/pack/Keil.STM32F1xx_DFP.2.2.0.pack
@@ -64,13 +63,13 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_FirmwareMain
-  C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.0.1\CMSIS\Include
+  C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.2.0\CMSIS\Include
   C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ARM::CMSIS:CORE:5.0.1
-Build Time Elapsed:  00:00:03
+   * Component: ARM::CMSIS:CORE:5.0.2
+Build Time Elapsed:  00:00:11
 </pre>
 </body>
 </html>
