--- a/MDK-ARM/FirmwareMain/FirmwareMain.build_log.htm
+++ b/MDK-ARM/FirmwareMain/FirmwareMain.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\Chris\FirmwareMain\MDK-ARM\FirmwareMain.uvprojx
+C:\Users\Chris\Documents\GitHub\FirmwareMain\MDK-ARM\FirmwareMain.uvprojx
 Project File Date:  12/19/2017
 
 <h2>Output:</h2>
@@ -30,18 +30,19 @@ Build target 'FirmwareMain'
 compiling stm32f1xx_hal_cortex.c...
 compiling system_stm32f1xx.c...
 compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_gpio_ex.c...
 compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_flash_ex.c...
-compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_dma.c...
 compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_uart.c...
 compiling stm32f1xx_it.c...
 compiling stm32f1xx_hal_tim.c...
+compiling shiftregister.c...
 compiling stm32f1xx_hal_msp.c...
 compiling main.c...
 linking...
@@ -69,7 +70,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.2
-Build Time Elapsed:  00:00:11
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
