--- a/MDK-ARM/FirmwareMain/FirmwareMain.build_log.htm
+++ b/MDK-ARM/FirmwareMain/FirmwareMain.build_log.htm
@@ -27,29 +27,38 @@ Project File Date:  12/19/2017
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'FirmwareMain'
-compiling system_stm32f1xx.c...
-compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_gpio_ex.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling system_stm32f1xx.c...
+compiling stm32f1xx_hal_flash.c...
 compiling stm32f1xx_hal_tim_ex.c...
 compiling stm32f1xx_hal_rcc.c...
-compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_uart.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_flash_ex.c...
 assembling startup_stm32f100xe.s...
-compiling stm32f1xx_hal_uart.c...
 compiling rgb_led.c...
 compiling shiftregister.c...
 compiling stm32f1xx_hal_tim.c...
-compiling main.c...
-compiling stm32f1xx_hal_msp.c...
 compiling stm32f1xx_it.c...
-linking...
-Program Size: Code=7592 RO-data=364 RW-data=36 ZI-data=1812  
-"FirmwareMain\FirmwareMain.axf" - 0 Error(s), 0 Warning(s).
+../Src/stm32f1xx_it.c(201): error:  #29: expected an expression
+  <<<<<<< HEAD
+../Src/stm32f1xx_it.c(204): error:  #29: expected an expression
+  =======
+../Src/stm32f1xx_it.c(208): error:  #29: expected an expression
+  >>>>>>> a0e29b7b733ac34fde974c94cb879d42c99bec1f
+../Src/stm32f1xx_it.c(252): error:  #65: expected a ";"
+  {
+../Src/stm32f1xx_it.c(310): warning: At end of source:  #12-D: parsing restarts here after previous syntax error
+../Src/stm32f1xx_it.c(310): error: At end of source:  #67: expected a "}"
+../Src/stm32f1xx_it.c: 1 warning, 5 errors
+compiling stm32f1xx_hal_msp.c...
+compiling main.c...
+"FirmwareMain\FirmwareMain.axf" - 5 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -72,6 +81,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.1
+Target not created.
 Build Time Elapsed:  00:00:03
 </pre>
 </body>
